// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CardDetails component matches the snapshot when given specific props 1`] = `
Array [
  <div
    className="fGxWFj"
  >
    <div
      className="jrJpoM"
      dangerouslySetInnerHTML={
        Object {
          "__html": "Do you know the essential first step of good SEO? It’s keyword research. In this training, 
you’ll learn how to research and select the keywords that will guide searchers to your pages.",
        }
      }
    />
  </div>,
  <div
    className="drYPvB"
  >
    <a
      className="ffhiWj"
      href="https://yoast.com/cart/?add-to-cart=1311259"
      rel={null}
      target="_blank"
    >
      Start your free trail
      <span
        className="fcHEfD"
      >
        (Opens in a new browser tab)
      </span>
    </a>
    <a
      className="bcLHpn"
      href="https://yoast.com/academy/keyword-research-training/"
      rel={null}
      target="_blank"
    >
      Read more about this training »
      <span
        className="fcHEfD"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>,
]
`;

exports[`The empty CardDetails component matches the snapshot 1`] = `
Array [
  <div
    className="fGxWFj"
  >
    <div
      className="jrJpoM"
      dangerouslySetInnerHTML={
        Object {
          "__html": "",
        }
      }
    />
  </div>,
  <div
    className="drYPvB"
  >
    <a
      className="ifwZAz"
      href={undefined}
      rel={null}
      target="_blank"
    >
      <span
        className="fcHEfD"
      >
        (Opens in a new browser tab)
      </span>
    </a>
    <a
      className="bcLHpn"
      href=""
      rel={null}
      target="_blank"
    >
      
      <span
        className="fcHEfD"
      >
        (Opens in a new browser tab)
      </span>
    </a>
  </div>,
]
`;
